C2 failed "assert(_stack_guard_state == stack_guard_reserved_disabled) failed: inconsistent state"

XMLWordPrintable

    • b05
    • aarch64
    • linux

        The following closed test failed in the JDK21 CI:

        vmTestbase/vm/compiler/regression/b4659732/b4659732.java

        Here's a snippet from the log file:

        17522 17523 17524 17525 17526 17527 17528 17529 17530 17531 17532 17533 17534 17535 17536 17537 17538 17539 17540 17541 17542 17543 17544 17545 17546 17547 17548 17549 17550 17551 17552 17553 17554 17555 17556 17557 17558 17559 17560 17561 17562 17563 17564 17565 17566 17567 17568 17569 17570 17571 17572 17573 17574 17575 17576 17577 17578 17579 17580 17581 17582 17583 17584 17585 17586 17587 17588 17589 17590 17591 17592 17593 17594 17595 17596 17597 17598 17599 17600 17601 17602 17603 17604 17605 17606 17607 17608 17609 17610 17611 17612 17613 17614 17615 17616 17617 17618 17619 17620 17621 17622 17623 17624 17625 17626 17627 17628 17629 17630 17631 17632 17633 17634 17635 17636 17637 17638 17639 17640 17641 17642 17643 17644 17645 17646 17647 17648 17649 #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105687/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/75bea5d9-3494-44c5-b595-940c09953f94/runs/d47578f2-2d63-4496-ae16-7d9c1168ade8/workspace/open/src/hotspot/share/runtime/stackOverflow.cpp:148), pid=4102839, tid=4102861
        # assert(_stack_guard_state == stack_guard_reserved_disabled) failed: inconsistent state
        #
        # JRE version: Java(TM) SE Runtime Environment (21.0+25) (fastdebug build 21-ea+25-LTS-2192)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+25-LTS-2192, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
        # Problematic frame:
        # V [libjvm.so+0x14fadf0] StackOverflow::enable_stack_reserved_zone(bool)+0x160
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S179842/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/feaef807-e9e4-4563-953a-43b337b4d31b/runs/4eaae39f-3447-4f6b-88b2-840fe0aebedb/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_vmTestbase_vm_compiler_regression/scratch/2/core.4102839)
        #
        # An error report file with more information is saved as:
        # /opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S179842/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/feaef807-e9e4-4563-953a-43b337b4d31b/runs/4eaae39f-3447-4f6b-88b2-840fe0aebedb/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_vmTestbase_vm_compiler_regression/scratch/2/hs_err_pid4102839.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        ----------System.err:(1/176)----------
        Java HotSpot(TM) 64-Bit Server VM warning: Potentially dangerous stack overflow in ReservedStackAccess annotated method vm.compiler.regression.b4659732.b4659732.recurse()V [1]
        ----------rerun:(40/10340)*----------


        Here's the crashing thread's stack trace:

        --------------- T H R E A D ---------------

        Current thread (0x0000ffffb44fcb00): JavaThread "MainThread" [_thread_in_Java, id=4102861, stack(0x0000ffff72fff000,0x0000ffff731ff000) (2048K)]

        Stack: [0x0000ffff72fff000,0x0000ffff731ff000], sp=0x0000ffff7301c090, free space=116k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x14fadf0] StackOverflow::enable_stack_reserved_zone(bool)+0x160 (stackOverflow.cpp:148)
        V [libjvm.so+0x14a2648] SharedRuntime::enable_stack_reserved_zone(JavaThread*)+0x58 (sharedRuntime.cpp:3348)
        J 259 c2 vm.compiler.regression.b4659732.b4659732.recurse()V (31 bytes) @ 0x0000ffffa8d41f68 [0x0000ffffa8d407c0+0x00000000000017a8]

        [error occurred during error reporting (printing native stack (with source info)), id 0xe0000000, Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105687/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/75bea5d9-3494-44c5-b595-940c09953f94/runs/d47578f2-2d63-4496-ae16-7d9c1168ade8/workspace/open/src/hotspot/share/code/codeCache.inline.hpp:49)]

        Retrying call stack printing without source information...
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x14fadf0] StackOverflow::enable_stack_reserved_zone(bool)+0x160 (stackOverflow.cpp:148)
        V [libjvm.so+0x14a2648] SharedRuntime::enable_stack_reserved_zone(JavaThread*)+0x58
        J 259 c2 vm.compiler.regression.b4659732.b4659732.recurse()V (31 bytes) @ 0x0000ffffa8d41f68 [0x0000ffffa8d407c0+0x00000000000017a8]

        [error occurred during error reporting (retry printing native stack (no source info)), id 0xe0000000, Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105687/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/75bea5d9-3494-44c5-b595-940c09953f94/runs/d47578f2-2d63-4496-ae16-7d9c1168ade8/workspace/open/src/hotspot/share/code/codeCache.inline.hpp:49)]

              Assignee:
              David Holmes
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: